# godottools

./: LICENSE  README.md
developer_tools/: .gitignore  LICENSES.txt  README.md  godottools.csproj  godottools.sln  icon.svg.import  project.godot
developer_tools/Properties/: launchSettings.json
developer_tools/global/: bootstrap.tscn  permaload.tscn
developer_tools/src/: Assert.cs  Bootstrap.cs  Dbg.cs  Find.cs  Game.cs  Permaload.cs
developer_tools/src/prof/: Prof.cs
developer_tools/ui/debug/: DebugBlackboardWindow.cs  DebugButtonWindow.cs  DebugProfWindow.cs  DebugSyntaxHighlighter.cs  DebugSyntaxHighlighter.tres  DebugUI.cs  LineChart.cs  blackboard.png.import  console.png.import  debug.tscn  debug_font.tres  debug_theme.tres  hacker.png.import  pause.png.import  save-arrow.png.import  stopwatch.png.import  window_blackboard.tscn  window_blackboard_item.tscn  window_button.tscn  window_button_item.tscn
vendoring/: .gitignore  README.md  SETUP.md  build_and_run_editor.bat  build_editor.bat  nuget.config  run_editor.bat  tool.bat
vendoring/godot/: yourprojectname.build_profile.json
vendoring/tools/: bootstrap.py  build_and_run_editor.py  build_editor.py  build_utils.py  cmd.py  deploy.py  deploy_full.py  patch.py  pyproject.toml  remerge.py  run_editor.py  thirdparty_update.py  update_godot.py  util.py
